[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.black]
line-length = 79

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "bigmem: marks tests as big memory (deselect with '-m \"not bigmem\"')",
    "evm_tools: marks tests as evm_tools (deselect with '-m \"not evm_tools\"')",
]

[tool.docc]
context = [
    "docc.references.context",
    "docc.search.context",
]

discovery = [
    "docc.search.discover",
    "docc.html.discover",
    "docc.cst.discover",
    "docc.listing.discover",
]

build = [
    "docc.search.build",
    "docc.cst.build",
    "docc.listing.build",
    "docc.resources.build",
]

transform = [
    "docc.cst.transform",
    "docc.mistletoe.transform",
    "docc.references.index",
    "docc.search.transform",
    "docc.html",
]

[tool.docc.plugins."docc.cst.transform"]
excluded_references = [
    "ethereum_spec_tools.lint.lints",   # This is a namespace package.
]

[tool.docc.plugins."docc.cst.discover"]
paths = [
    "src",
]

[tool.docc.output]
path = "docs"
extension = ".html"
